--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,8 @@ body {
 .portfolio-item {
   float: left;
   margin: 0 15px 30px;
+  cursor: pointer;
+
 }
 
 .portfolio-item:nth-child(3n+1) {
@@ -192,7 +194,11 @@ body {
 
 .portfolio-item img {
   border-radius: 15px;
+  transition: 0.3s;
+}
 
+.portfolio-item img:hover {
+  transform: scale(1.1);
 }
 
 /* About-me */
@@ -213,4 +219,48 @@ body {
 .footer {
   padding: 50px 0;
   text-align: center;
+}
+
+/* Blog */
+.blog {
+  padding: 50px 0;
+}
+
+.blog .section-title {
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.article {
+  padding: 30px;
+  background-color: var(--dark-gray);
+  border-radius: 16px;
+  margin-bottom: 30px;
+  box-shadow: 0 2px 8px 0 #0000001A;
+}
+
+.article-title {
+  font-size: 42px;
+  margin-bottom: 20px;
+}
+
+.article-category-list {
+  font-size: 0;
+  margin-bottom: 30px;
+}
+
+.article-category-list li {
+  display: inline-block;
+  font-size: 14px;
+  background-color: var(--blue-color);
+  border-radius: 14px;
+  padding: 5px 20px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.article p {
+  text-align: justify;
+  line-height: 1.3;
+  margin-bottom: 30px;
 }
