--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,25 @@ body {
   cursor: pointer;
 }
 
-.article p {
+.article>p {
   text-align: justify;
   line-height: 1.3;
   margin-bottom: 30px;
+}
+
+.article-likes {
+  float: left;
+}
+
+.article-likes p {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+.article-likes p img {
+  margin-right: 10px;
+}
+
+.article-views {
+  float: right;
 }
